@@ -1,6 +1,7 @@
 -classpath/a %EXE4J_EXEDIR%\..\lib\tools.jar
 -Dtools.jar=%EXE4J_EXEDIR%\..\lib\tools.jar
 -Xmx512m
+-XX:MaxPermSize=128m
 -Dserver.port=12222
 -Dgrails.env=production 
 -Ddisable.auto.recompile=true 
